[tool.poetry]
name = "scheme"
version = "0.1.0"
description = ""
authors = ["LeafChage <t.kusanagi5512@gmail.com>"]
readme = "README.md"
packages = [
    {include = "scheme"},
    {include = "p"},
    {include = "util"}
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pyright = "^1.1.333"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


