[tool.poetry]
name = "scheme"
version = "0.1.0"
description = ""
authors = ["LeafChage <t.kusanagi5512@gmail.com>"]
readme = "README.md"
packages = [
    {include = "scheme"},
    {include = "p"},
]

[tool.poetry.dependencies]
python = "^3.12"
flytrap-py = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pyright = "^1.1.333"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s"
testpaths = [ "." ]
python_files = "*_test.py"
